--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="logo">INVITAPP</div>
+        <div class="logo" id="logo">INVITAPP</div>
         <div class="desplegable" id="desplegable">
             <nav class="nav-bar ocultar" id="nav-bar">
                 <ul class="nav-list">
