Avances en el form de la tarjeta, falta coordinar la forma de cambiar la imagen

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <div class="contenedor">
                 <div class="añadir-tarjeta">
                     <div class="tarjeta">
-                        <div id="atNumero">01</div>
-                        <div id="atFoto"><img src="./img/Usuarios/Usuario.png" alt="tipo de usuario"></div>
+                        <div id="atNumero">N°</div>
+                        <div id="atAvatar"><img src="./img/Usuarios/Ninguno.png" alt="tipo de usuario"></div>
                         <div id="atNombre">Nombre</div>
                         <div id="atTrae">Item</div>
-                        <div id="atGasto">$costo</div>
+                        <div id="atGasto">$ Gasto</div>
                         <div id="atCorreo">correo@gmail.com</div>
                     </div>
                     <p id="btn-tarjeta" type="submit">Añadir</p>
@@ -53,26 +53,27 @@
                     <input class="inputs" type="text" name="nombreInvitado" id="nombreInvitado">
                     <label for="avatarInvitado">Avatar:</label>
                     <select class="inputs" name="avatarInvitado" id="avatarInvitado">
-                        <option value="ninguno">Ninguno</option>
-                        <option value="artista">Artista</option>
-                        <option value="artisto">Artisto</option>
-                        <option value="beba">Beba</option>
-                        <option value="bebe">Bebe</option>
-                        <option value="cientifica">Cientifica</option>
-                        <option value="cientifico">Cientifico</option>
-                        <option value="constructor">Constructor</option>
-                        <option value="constructora">Constructora</option>
-                        <option value="dieguete">Dieguete</option>
-                        <option value="doctora">Doctora</option>
-                        <option value="doctor">Doctor</option>
-                        <option value="empresaria">Empresaria</option>
-                        <option value="empresario">Empresario</option>
-                        <option value="lio">Lio</option>
-                        <option value="niño">Niño</option>
-                        <option value="niña">Niña</option>
-                        <option value="princesa">Princesa</option>
-                        <option value="bicho">El Bicho</option>
-                        <option value="vaquero">Vaquero</option>
+                        <option value="Artista">Artista</option>
+                        <option value="Artisto">Artisto</option>
+                        <option value="Bebe">Bebe</option>
+                        <option value="Chica">Chica</option>
+                        <option value="Chico">Niño</option>
+                        <option value="Cientifica">Cientifica</option>
+                        <option value="Cientifico">Cientifico</option>
+                        <option value="Cocinera">Cocinera</option>
+                        <option value="Cocinero">Cocinero</option>
+                        <option value="Constructor">Constructor</option>
+                        <option value="Constructora">Constructora</option>
+                        <option value="Cristiano">Cristiano</option>
+                        <option value="Diego">Diego</option>
+                        <option value="Doctor">Doctor</option>
+                        <option value="Doctora">Doctora</option>
+                        <option value="Empresaria">Empresaria</option>
+                        <option value="Empresario">Empresario</option>
+                        <option value="Messi">Messi</option>
+                        <option value="Ninguno">Ninguno</option>
+                        <option value="Princesa">Princesa</option>
+                        <option value="Vaquero">Vaquero</option>
                     </select>
                     <label for="llevaInvitado">¿Que lleva? (solo un item)</label>
                     <input class="inputs" type="text" name="llevaInvitado" id="llevaInvitado">
