--- a/index.html
+++ b/index.html
@@ -42,17 +42,18 @@
                         <div id="atNumero">N°</div>
                         <div id="atAvatar"><img src="./img/Usuarios/Ninguno.png" alt="tipo de usuario"></div>
                         <div id="atNombre">Nombre</div>
-                        <div id="atTrae">Item</div>
+                        <div id="atLleva">Item</div>
                         <div id="atGasto">$ Gasto</div>
                         <div id="atCorreo">correo@gmail.com</div>
                     </div>
-                    <p id="btn-tarjeta" type="submit">Añadir</p>
+                    <p id="btnAgregar" type="submit">Añadir</p>
                 </div>
                 <form action="#" method="get" id="añadirForm">
                     <label for="nombreInvitado">Nombre del invitado:</label>
                     <input class="inputs" type="text" name="nombreInvitado" id="nombreInvitado">
                     <label for="avatarInvitado">Avatar:</label>
                     <select class="inputs" name="avatarInvitado" id="avatarInvitado">
+                        <option value="Ninguno">Ninguno</option>
                         <option value="Artista">Artista</option>
                         <option value="Artisto">Artisto</option>
                         <option value="Bebe">Bebe</option>
@@ -71,7 +72,6 @@
                         <option value="Empresaria">Empresaria</option>
                         <option value="Empresario">Empresario</option>
                         <option value="Messi">Messi</option>
-                        <option value="Ninguno">Ninguno</option>
                         <option value="Princesa">Princesa</option>
                         <option value="Vaquero">Vaquero</option>
                     </select>
@@ -80,7 +80,7 @@
                     <label for="gastoInvitado">¿Cuanto gasto?</label>
                     <input class="inputs" type="number" name="gastoInvitado" id="gastoInvitado">
                     <label for="mailInvitado">eMail:</label>
-                    <input class="inputs" type="email" name="mailInvitado" id="mailInvitado">
+                    <input class="inputs" type="email" name="correoInvitado" id="correoInvitado">
                 </form>
             </div>
         </section>
