Acomode las tarjetas en seccion invitados, y ahora se agregan de a una

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         </section>
         <section id="lista">
             <h2 class="subtitulo">Gestion invitados</h2>
-            <div class="contenedorInvitados">
-                <div>
+            <div id="contenedorInvitados" class="contenedorInvitados">
+                <!-- <div>
                     <div id="contenedorRender" class="contenedorRender">
                         <div id="renderTarjeta" class="renderTarjeta">
                             <div class="num">N°</div>
@@ -105,7 +105,7 @@
                         <p id="" class="btn gastos">Editar Gastos</p>
                         <p id="" class="btn correo">Editar Correo</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <section id="ver">
