cambios en el navBar y header

--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 
 <body>
     <header>
-        <div class="logo" id="logo">INVITAPP</div>
         <div class="desplegable" id="desplegable">
             <nav class="nav-bar ocultar" id="nav-bar">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#inicio" class="nav-link">Inicio</a></li>
-                    <li class="nav-item"><a href="#añadir" class="nav-link">Añadir</a></li>
-                    <li class="nav-item"><a href="#lista" class="nav-link">Lista</a></li>
-                    <li class="nav-item"><a href="#ver" class="nav-link">Ver</a></li>
+                    <li class="nav-item"><a href="#añadir" class="nav-link">Añadir Invitados</a></li>
+                    <li class="nav-item"><a href="#lista" class="nav-link">Gestionar Invitados</a></li>
+                    <li class="nav-item"><a href="#ver" class="nav-link">Gestion de Gastos</a></li>
                 </ul>
             </nav>
-            <button id="boton-desplegar"><img id="img-boton" src="./img/flechaMenu.png"
-                    alt="Flecha menu desplegable"></button>
+            <div class="logo" id="logo">
+                <p>INVITAPP</p>
+                <button id="boton-desplegar"><img id="img-boton" src="./img/flechaMenu.png" alt="Flecha menu desplegable"></button>
+            </div>
         </div>
     </header>
     <main>
