Carga de tarjetas del LS al cargar la pagina

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <option value="Artisto">Artisto</option>
                         <option value="Bebe">Bebe</option>
                         <option value="Chica">Chica</option>
-                        <option value="Chico">Niño</option>
+                        <option value="Chico">Chico</option>
                         <option value="Cientifica">Cientifica</option>
                         <option value="Cientifico">Cientifico</option>
                         <option value="Cocinera">Cocinera</option>
