añadi boton de limpiar LS

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                     </div>
                 </div> -->
             </div>
+            <p id="btnLimpiarLS">Limpiar lista</p>
         </section>
         <section id="ver">
             <h2 class="subtitulo">Gastos generales</h2>
