Agregue sweet alert y corregi el boton de limpiar

--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
             <h2 class="subtitulo">Gastos generales</h2>
         </section>
     </main>
+
+
+    <!-- SCRIPTS -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./script.js"></script>
 </body>
 
