Vista previa tarjeta es funcional, falta arreglar la renderizacion y añadir el factor aleatorio

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         placeholder="(de a un item por vez)">
                         <label for="gastoInvitado">¿Cuanto gasto?</label>
                         <input class="inputs" type="number" name="gastoInvitado" id="gastoInvitado">
-                        <p class="btnNuevoGasto" id="btnNuevoGasto">Nuevo gasto</p>
+                        <p class="btnNuevoGasto" id="btnNuevoGasto">Ingresar Gasto</p>
                     </form>
                 </form>
                 <div class="añadir-tarjeta">
