Agregamos JSON y configuramos Ejemplo de Invitados

--- a/index.html
+++ b/index.html
@@ -96,33 +96,12 @@
         </section>
         <section id="lista">
             <h2 class="subtitulo">Gestion invitados</h2>
-            <div id="contenedorInvitados" class="contenedorInvitados">
-                <!-- <div>
-                    <div id="contenedorRender" class="contenedorRender">
-                        <div id="renderTarjeta" class="renderTarjeta">
-                            <div class="num">N°</div>
-                            <div class="ava"><img src="./img/Usuarios/Ninguno.png" alt="tipo de usuario"></div>
-                            <div class="nom">Nombre</div>
-                            <div class="ite">Item</div>
-                            <div class="gas">$ Gasto</div>
-                            <div class="cor">correo@gmail.com</div>
-                        </div>
-                    </div>
-                    <div id="editarBotones" class="editarBotones">
-                        <p id="" class="btn avatar">Editar Avatar</p>
-                        <p id="" class="btn nombre">Editar Nombre</p>
-                        <p id="" class="btn items">Editar Items</p>
-                        <p id="" class="btn gastos">Editar Gastos</p>
-                        <p id="" class="btn correo">Editar Correo</p>
-                    </div>
-                </div> -->
+            <div id="contenedorInvitados" class="contenedorInvitados"></div>
+            <div class="botones">
+                <p class="btnLista" id="btnLimpiarLS">Limpiar lista</p>
+                <p class="btnLista" id="btnEjemplo">Cargar Ejemplo</p>
             </div>
-            <p id="btnLimpiarLS">Limpiar lista</p>
         </section> -->
-        <!-- <section id="ver">
-            <h2 class="subtitulo">Gastos generales</h2>
-        </section>
-    </main>
 
 
     <!-- SCRIPTS -->
